attempting to fix gap on landing page

--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -16,13 +16,13 @@
 	z-index: 100000000;
 }
 
-#clipped {
+/*#clipped {
 	-webkit-clip-path: polygon(100% 0, 100% 100pt, 50% 83pt, 0 110pt, 0 0);
 	clip-path: polygon(100% 0, 100% 100pt, 50% 83pt, 0 110pt, 0 0);
 	background-color: rgb(255, 128, 0);
 	height: 250px;
 	padding-bottom: 0;
-}
+}*/
 
 .nav-wrap {
 	max-width: 1120px;
