--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -59,3 +59,10 @@ h3 {
 	margin-bottom: 25px;
 }
 
+#body {
+	background-image: url(../img/profileBG.jpg);
+	background-attachment: fixed;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
